--- a/desarrollo.html
+++ b/desarrollo.html
@@ -18,136 +18,203 @@
 	<h1>3. Desarrollo</h1> <br>
 	<h3>PLANEACIÓN</h3>
 	<h3>Modelo Cascada </h3>
-	<h5>
-		1.   Recolección y Análisis de Requisitos
+	<h4>
+		1.   Recolección y Análisis de Requisitos</h4>
 Descripción: En esta fase, se recolectan y analizan los requisitos del sistema para entender qué debe 
 hacer el software.
 Objetivo: Definir claramente todas las necesidades y expectativas del cliente.
 Resultado: Documentos de requisitos detallados que especifican las funcionalidades y restricciones 
 del sistema.
-		<br><br>
-	</h5>
-	<h5>
-		2.   Diseño del Sistema
+	
+	<h4>
+		2.   Diseño del Sistema</h4>
 Descripción:  Se  crea  la  arquitectura  del  sistema,  especificando  cómo  se  organizarán  los 
 componentes y cómo interactuarán entre sí.
 Objetivo: Crear un plan detallado que guíe la construcción del software.
 Resultado: Diagramas y especificaciones técnicas que describen la estructura y el diseño del sistema.
 		<br><br>
-	</h5>
-	<h5>
-		3.   Implementación
+	
+	<h4>
+		3.   Implementación</h4>
 Descripción: En esta fase, se escribe el código del software basado en los diseños especificados. 
 Objetivo: Convertir los diseños en un sistema funcional.
 Resultado: Código fuente que implementa todas las funcionalidades y requisitos definidos.
-	</h5>
 	
-	<h5>
-		4.   Pruebas
+	
+	<h4>
+		4.   Pruebas</h4>
 Descripción:  Se  verifica  que  el  software  funcione  correctamente  y  cumpla  con  los  requisitos 
 especificados.
 Objetivo: Identificar y corregir errores en el software.
 Resultado: Un sistema probado que cumple con los estándares de calidad y funcionalidad.
-	</h5>
+	
 
-	<h5>
-		5.   Despliegue
+	<h4>
+		5.   Despliegue</h4>
 Descripción: El software se entrega y se instala en el entorno de producción para su uso por los 
 usuarios finales.
 Objetivo: Poner el sistema en manos de los usuarios. 
 Resultado: Software operando en el entorno del cliente.
-	</h5>
+	
 
-	<h5>
-		6.   Mantenimiento
+	<h4>6.   Mantenimiento</h4>
+		
 Descripción: Se realiza el mantenimiento del software para corregir errores que no se detectaron 
 en las pruebas, mejorar la funcionalidad y adaptarse a los cambios en el entorno.
 Objetivo: Asegurar que el sistema siga funcionando correctamente y se mantenga relevante a lo 
 largo del tiempo.
 Resultado: Actualizaciones y mejoras continuas del software.
-	</h5>
+	
 
 	<h5>
-		Características Clave del Modelo de Cascada
+		Características Clave del Modelo de Cascada</h5>
 Secuencial: Cada fase debe completarse antes de comenzar la siguiente. No se vuelve a fases 
-anteriores.
+anteriores.<br>
 Documentación  Extensiva:  Cada  fase  produce  documentación  que  se  utiliza  como  guía  en  la 
-siguiente fase.
+siguiente fase.<br>
 Riesgo de Rigidez: Dificulta la respuesta rápida a cambios en los requisitos una vez que el proyecto 
 ha avanzado.
-	</h5>
+	
 
 
 	<h3>Requerimientos y optimización</h3>
-	<h5>
-		Importancia de la Recopilación de Requisitos
+	<h4>
+		Importancia de la Recopilación de Requisitos</h4>
 Clara Definición de Objetivos: Asegura que el equipo de desarrollo y los stakeholders tengan una 
-visión clara y compartida de lo que se espera del producto.
+visión clara y compartida de lo que se espera del producto.<br>
 Reducción de Riesgos: Identificar y entender los requisitos desde el principio ayuda a evitar cambios 
-costosos y retrasos más adelante.
-Técnicas para la Recopilación de Requisitos
+costosos y retrasos más adelante.<br>
+<h4>Técnicas para la Recopilación de Requisitos</h4>
 Entrevistas:   Hablar   directamente   con   los   stakeholders   para   entender   sus   necesidades   y 
-expectativas.
+expectativas.<br>
 Cuestionarios y Encuestas: Herramientas útiles para recopilar información de un gran número de 
-personas de manera eficiente.
+personas de manera eficiente. <br>
 Talleres de Requisitos: Reuniones colaborativas donde los stakeholders y el equipo de desarrollo 
-trabajan juntos para definir los requisitos.
+trabajan juntos para definir los requisitos.<br>
 Análisis de Documentación: Revisar documentos existentes que puedan proporcionar contexto y 
-detalles sobre los requisitos del sistema.
+detalles sobre los requisitos del sistema.<br>
 Creación de Personas y Escenarios: Definir perfiles de usuarios y situaciones para entender mejor 
-cómo se utilizará el producto.
-Optimización del Proceso de Recopilación de Requisitos
+cómo se utilizará el producto.<br>
+<h4>Optimización del Proceso de Recopilación de Requisitos</h4>
 Participación Continua de los Stakeholders: Mantén a los stakeholders involucrados a lo largo del 
-proyecto para asegurarte de que los requisitos sigan alineados con sus necesidades.
+proyecto para asegurarte de que los requisitos sigan alineados con sus necesidades.<br>
 Documentación Clara y Concisa: Es fundamental tener documentos de requisitos bien estructurados 
-y fáciles de entender.
+y fáciles de entender.<br>
 Uso de Prototipos: Crear prototipos tempranos puede ayudar a validar los requisitos y obtener 
-feedback rápidamente.
+feedback rápidamente.<br>
 Priorizar Requisitos: No todos los requisitos tienen el mismo valor. Usar técnicas como el análisis 
-MOSCOW (Must have, Should have, Could have, Won't have) para priorizar.
+MOSCOW (Must have, Should have, Could have, Won't have) para priorizar.<br>
 Revisiones Regulares: Revisar y ajustar los requisitos regularmente para reflejar cambios en las 
 necesidades y el contexto del proyecto.
-	</h5>
+	
 
 	
 	<h3>Gestión de proyecto </h3>
 	
-	<h5>
-		<br>Para una mejor comprensión de la definición de probabilidad condicional, consideremos el siguiente escenario: imaginemos que ha tenido lugar un evento A y 
-		nos preguntamos cuál es la probabilidad de que otro evento B ocurra en las mismas circunstancias. Por ejemplo, si hemos extraído un naipe  rojo de una baraja 
-		estándar de 52 cartas, ¿cuál es la probabilidad de que la carta seleccionada sea el as de corazones? <br>
+	<h4>Planificación del Proyecto:</h4>
+		<ul>
+			<li>Definición de Objetivos: Clarificar lo que el proyecto debe lograr.</li>
+			<li>Estructura de Desglose del Trabajo (EDT): Dividir el proyecto en tareas más manejables.</li>
+			<li>Estimación de Costos y Tiempo: Utilizar técnicas como PERT o COCOMO para estimar tiempo y recursos necesarios.</li>
+			<li>Planificación del Calendario: Crear un cronograma que detalle cuándo se deben completar las tareas. Herramientas como diagramas de Gantt son útiles aquí.</li>
+		  </ul>
 		<br><img src="media/img/naipe1.gif" alt="">
-	</h5>
-	<h5 align="justify"><i>
-		“Si afirmamos que el evento A ya ha tenido lugar, podemos considerar que A se convierte en nuestro espacio muestral, ya que sabemos que no ha ocurrido 
-		ningún elemento x ∈ Ā .” <br></i>
-	</h5>
-	<h5>
-		En este contexto, resulta lógico evaluar la probabilidad de que el evento B ocurra también, basándonos en la proporción del tiempo en el que A y B se producen 
-		simultáneamente. De hecho, esto es a lo que se refiere la probabilidad condicional de que B ocurra dado que A ya ha ocurrido. <br><br>
-		Un diagrama de Venn es una herramienta que se emplea para representar visualmente las relaciones entre conjuntos. En el contexto de la probabilidad condicional, 
-		se utiliza para ilustrar la intersección entre dos eventos. Para entender su utilidad, consideremos lo siguiente: tenemos dos eventos, A y B, relacionados con 
-		un experimento E, y estamos interesados en la probabilidad condicional de que el evento B ocurra dado que ya ha ocurrido el evento A, lo cual denotamos como 
-		P(B | A). <br>
-	</h5>
-	<h5 align="justify"><i>
-		“Cuando calculamos P(B | A) estamos calculando la probabilidad de que ocurra B dentro del subconjunto A del espacio muestral original S. En contraste, cuando 
-		calculamos P(B), estamos evaluando cuán probable es que ocurra B en el contexto de todo el espacio muestral S. Al calcular P(B | A), nos enfocamos en la 
-		probabilidad de que B ocurra, sabiendo que estamos en A.” [11] </i><br>
-	</h5>
-	<h5>
-		En otras palabras, el espacio muestral se ha reducido de S a A.
-	</h5>
-	<img src="media/img/img3.PNG" alt="">
-	<h5>
-		<br>Por lo tanto, la probabilidad condicional se utiliza para verificar conjuntos de suposiciones o hipótesis. Además, es importante destacar que una de sus 
-		aplicaciones más significativas consiste en simplificar el cálculo de las intersecciones de eventos en ciertos experimentos. <br><br>
-		Considerando que:
-	</h5>
-	<img src="media/img/img4.png" alt="">
+	
+	<h4>Gestión de Riesgos: </h4>
+		<ul>
+			<li>Identificación de Riesgos: Determinar posibles problemas que podrían afectar el proyecto.</li>
+			<li>Análisis de Riesgos: Evaluar la probabilidad y el impacto de cada riesgo</li>
+			<li>Planificación de Respuestas a los Riesgos: Desarrollar estrategias para mitigar o manejar
+				estos riesgos.</li>
+			<li>Monitoreo de Riesgos: Supervisar continuamente los riesgos a lo largo del proyecto.</li>
+			<li>Control del Progreso: Utilizar métricas como el valor ganado (Earned Value) para medir el
+				avance.</li>
+			<li>Gestión de Cambios: Implementar un proceso para manejar solicitudes de cambio y
+				asegurarse de que se evalúen adecuadamente.</li>
+			<li>Revisiones y Auditorías: Realizar revisiones periódicas para garantizar que el proyecto se
+				mantiene en el buen camino	</li>
+		</ul>
 
-	<!-- Independencia -->
-	<h3><br><br><br>3.3 Independencia</h3>
+
+	<h4>Verificación y Validación del Software</h4>
+	<ul>
+		<li>Verificación: Proceso de evaluar productos intermedios para asegurar que están
+			construidos correctamente (¿Estamos construyendo el producto correctamente?).</li>
+		<li>Validación: Proceso de evaluar el producto final para asegurar que cumple con las
+			necesidades del cliente (¿Estamos construyendo el producto correcto?).</li>
+		<li>Revisiones y Auditorías: Evaluaciones sistemáticas de productos intermedios.</li>
+		<li>Pruebas Unitarias: Pruebas de pequeñas unidades de código de manera aislada.</li>
+		<li>Análisis Estático: Herramientas que analizan el código sin ejecutarlo para detectar errores</li>
+		<li>Pruebas de Sistema: Pruebas del sistema completo para asegurar que cumple con los
+			requisitos.</li>
+		<li>Pruebas de Aceptación del Usuario: Pruebas realizadas por los usuarios finales para asegurar
+			que el software cumple con sus necesidades</li>
+		<li>Pruebas de Aceptación del Usuario: Pruebas realizadas por los usuarios finales para asegurar
+			que el software cumple con sus necesidades</li>
+		<li>Pruebas de Integración: Verificación de que los módulos de software funcionan
+			correctamente juntos.</li> <br>
+	</ul>
+	<h3>CICLO DE VIDA DEL SOFTWARE</h3>
+	<h3>Inducción para un equipo no especializado (cliente) </h3>
+	El desarrollo de software es como construir y mantener una casa. Al principio, la casa es solo un
+diseño en papel. Luego, con el tiempo, se va construyendo, adaptando y mejorando. A lo largo de
+su vida, se realizarán arreglos y cambios para mantenerla cómoda, segura y en buen estado.
+<ol>
+	<li>Diseño Inicial: Al empezar un proyecto de software, se necesita tener una idea clara de lo
+		que se quiere hacer, al igual que cuando se planea una casa. Pero en lugar de hacer un
+		diseño que nunca se puede cambiar, el diseño del software se hace pensando en que se
+		podrá modificar y mejorar con el tiempo.</li>
+	<li>Escribir el Código Claro y con Propósito: En esta fase, los desarrolladores escriben el
+		“código”, es decir, las instrucciones que le dicen a la computadora qué hacer. La idea aquí
+		es que estas instrucciones sean tan fáciles de entender como una receta de cocina clara y
+		simple, para que cualquiera que lea el código sepa exactamente qué hace cada parte</li>
+	<li>Pruebas y Mejoras Continuas: Una vez que el código está funcionando, se hacen pruebas
+		para asegurarse de que todo esté bien y que no haya errores. Estas pruebas se repiten
+		regularmente, como revisar cada cierto tiempo si las luces de la casa funcionan o si las
+		puertas están en buen estado. Además, durante el ciclo de vida del software, el código se
+		ajusta y mejora para que sea más claro y siga cumpliendo con lo que necesita hacer.</li>
+	<li>Mantenimiento y Evolución: A medida que el software se usa, pueden surgir nuevas
+		necesidades. Quizá los usuarios quieran que haga cosas nuevas o que funcione de una forma
+		diferente. Aquí, el software se ajusta y adapta, como cuando haces renovaciones en una
+		casa para mejorarla o hacerla más moderna.</li>
+	<li>Documentación Clara: En lugar de escribir un montón de documentos para explicar cada
+		detalle del software, se trata de que el código sea lo suficientemente claro por sí mismo. Sin
+		embargo, como una casa puede necesitar ciertos planos o instrucciones específicas (como
+		el uso de un sistema especial de calefacción), el software también tiene partes clave donde
+		se da una explicación extra para que cualquiera pueda entenderlas.</li>
+</ol>
+	
+	<h3>Proceso continuo de creación</h3>
+	El ciclo de vida del software puede entenderse como un proceso continuo de creación, mejora y
+	mantenimiento del código para garantizar que siga siendo claro, funcional y fácil de modificar. El
+	ciclo de vida no se trata solo de completar las etapas de desarrollo tradicionales (planificación,
+	diseño, implementación, pruebas y mantenimiento), sino de adoptar un enfoque de desarrollo ágil
+	y artesanal. Los aspectos clave para su implementación son: 
+	<ol>
+		<li>Diseño Inicial: En Código Limpio, el diseño inicial no significa hacer un diseño exhaustivo que
+			no se pueda cambiar, sino crear una estructura básica que sea fácil de extender. Se aplica
+			el principio de "hacerlo bien desde el principio", es decir, escribir código que sea claro y
+			comprensible desde la primera versión.</li>
+		<li>Codificación Clara y con Propósito: Durante la fase de implementación, el enfoque está en
+			escribir código que sea fácil de entender y mantener. Esto implica usar nombres
+			significativos, crear funciones pequeñas y específicas, y asegurarse de que el código sea lo
+			más simple posible para cumplir con su propósito.
+			</li>
+		<li>Pruebas Automatizadas y Refactorización Continua: Una parte esencial del ciclo de vida en
+			el contexto de Código Limpio es la importancia de las pruebas automáticas, que permiten
+			verificar rápidamente que el código funciona como se espera. La refactorización se hace de
+			forma continua, no como una fase aislada, para mejorar el diseño del código sin alterar su
+			funcionalidad. El proceso de refactorización permite mantener el código limpio y fácil de
+			cambiar en cada fase del ciclo de vida.</li>
+		<li>Mantenimiento y Evolución: En un enfoque de desarrollo ágil, el software se mejora
+			continuamente según las necesidades del cliente o del equipo. Esto implica realizar cambios
+			en el código sin que este se vuelva confuso o difícil de entender. Las prácticas de código
+			limpio aseguran que el software siga siendo mantenible y escalable a lo largo del tiempo</li>
+		<li>Mínima pero Clara: En lugar de documentar cada detalle del código, el enfoque de Código
+			Limpio sugiere que el propio código cuente la historia. La documentación se limita a lo
+			esencial y se enfoca en aspectos que realmente necesiten explicaciones adicionales.</li>
+	</ol>
+	<h3>Proceso automatizado </h3>
 	<h5>
 		<i>Definición: </i><br>
 		Decimos que dos eventos, A y B, son independientes cuando la probabilidad de que ocurra el evento A no cambia, independientemente de si el evento B ocurre o  
